[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apigeecli"
version = "0.54.0"
description = "User-friendly wrapper for the Apigee Edge admin APIs."
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.7"
license = { text = "Apache-2.0" }

authors = [
  { name = "Matthew Delotavo", email = "matthew.t.delotavo@gmail.com" }
]

keywords = ["apigee", "cli", "api", "automation"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7"
]

dependencies = [
  "click>=8.1.3",
  "click-aliases>=1.0.1",
  "click-option-group>=0.5.5",
  "colorama>=0.4.6",
  "GitPython>=3.1.34",
  "PyJWT>=2.6.0",
  "pyotp>=2.8.0",
  "python-gnupg>=0.3.5",
  "requests>=2.31.0",
  "tabulate>=0.9.0",
  "tqdm>=4.64.1"
]

[project.urls]
Homepage = "https://github.com/darumatic/apigee-cli"
Documentation = "https://darumatic.github.io/apigee-cli/index.html"

[project.scripts]
apigee = "apigee.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["apigee*"]